tests/functional/cases/fail/test_double_delete.coil
a: { x: 1 }
b: { @extends: ..a ~x ~x }
